crates/stef-compiler/tests/snapshots/compiler__error_resolve@local_sub_nested.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "struct Sample {\n    value: inner::a::b::c::Other @1,\n}\n\nmod inner {\n    mod a {\n        mod b {\n            mod c {}\n        }\n    }\n}"
input_file: crates/stef-compiler/tests/inputs/resolve/local_sub_nested.stef
---
  × type resolution failed
  ├─▶ failed resolving type in local modules
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭test::inner::a::b::c❬Y❭
   ╭─[local_sub_nested.stef:1:1]
 1 │ struct Sample {
 2 │     value: inner::a::b::c::Other @1,
   ·                            ──┬──
   ·                              ╰── used here
 3 │ }
 4 │ 
 5 │ mod inner {
   ╰────

