crates/stef-compiler/tests/snapshots/compiler__error_resolve@remote_root.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "use datetime::Date;\n\nstruct Sample {\n    value: Other @1,\n}"
input_file: crates/stef-compiler/tests/inputs/resolve/remote_root.stef
---
  × type resolution failed
  ├─▶ failed resolving type in remote modules
  ╰─▶ missing import for type ❬Y❭Other❬Y❭
   ╭─[remote_root.stef:1:1]
 1 │ use datetime::Date;
 2 │ 
 3 │ struct Sample {
 4 │     value: Other @1,
   ·            ──┬──
   ·              ╰── used here
 5 │ }
   ╰────

