crates/stef-compiler/tests/snapshots/compiler__error_resolve@remote_sub_type.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "use datetime::timing::Timestamp;\n\nstruct Sample {\n    value: Other @1,\n}"
input_file: crates/stef-compiler/tests/inputs/resolve/remote_sub_type.stef
---
  × type resolution failed
  ├─▶ failed resolving type in remote modules
  ╰─▶ missing import for type ❬Y❭Other❬Y❭
   ╭─[remote_sub_type.stef:1:1]
 1 │ use datetime::timing::Timestamp;
 2 │ 
 3 │ struct Sample {
 4 │     value: Other @1,
   ·            ──┬──
   ·              ╰── used here
 5 │ }
   ╰────

