crates/stef-compiler/tests/snapshots/compiler__error_validate@alias_tuple_empty.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: type Sample = ();
input_file: crates/stef-compiler/tests/inputs/validate/alias_tuple_empty.stef
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭zero elements❬W❭ are invalid
   ╭─[alias_tuple_empty.stef:1:1]
 1 │ type Sample = ();
   ·               ─┬
   ·                ╰── declared here
   ╰────
  help: a tuple must have between 2 and 12 elements

