crates/stef-compiler/tests/snapshots/compiler__error_validate@alias_tuple_single.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: type Sample = (u8);
input_file: crates/stef-compiler/tests/inputs/validate/alias_tuple_single.stef
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭a single element❬W❭ are invalid
   ╭─[alias_tuple_single.stef:1:1]
 1 │ type Sample = (u8);
   ·               ──┬─
   ·                 ╰── declared here
   ╰────
  help: a tuple must have between 2 and 12 elements

